[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
counter = "0.5.7"
num = "0.4.1"
rangemap = "1.4.0"
regex = "1.10.2"
regex-macro = "0.2.0"
itertools = "0.12.0"
test-case = "3.3.1"
memoize = "0.4.1"
multimap = "0.9.1"
indexmap = "2.1.0"
nalgebra = "0.32.3"
petgraph = "0.6.4"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
